--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,9 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_ACCESS_TOKEN }}
           ARGS: "-avz --delete"
-          SOURCE: "dist/"
+          SOURCE: "./dist/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.TARGET }}        
           
