--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ on: push
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: tencent_server
     defaults:
       run:
         working-directory: ./ppt
