--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           # npm 缓存文件存储在 Linux/macOS 上的 `~/.npm` 中
           # yarn 需要自定义缓存目录
           path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
@@ -32,17 +32,12 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Echo ENV 
-        env:
-          str: ${{ toJSON(secrets) }}
-        run: 
-          echo "$str"
       - name: Deploy pages
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_ACCESS_TOKEN }}
           ARGS: "-avz --delete"
-          SOURCE: dist/
+          SOURCE: ppt/dist/
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
