--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: rsync deployments
         uses: burnett01/rsync-deployments@5.1
         with:
-          switches: -avzr --delete --omit-dir-times --exclude=".user.ini" 
+          switches: -avzr --delete --no-o --no-g --exclude=".user.ini" 
           path: ppt/dist/
           remote_path: ${{ secrets.TARGET }}
           remote_host: ${{ secrets.REMOTE_HOST }}
